# HW_WEB10

./: README.md  pyproject.toml
hw_web10/: manage.py
hw_web10/app_hw_web10/: apps.py  forms.py  models.py  urls.py  views.py
hw_web10/app_hw_web10/migrations/: 0001_initial.py  0002_picture_user.py
hw_web10/app_hw_web10/templates/app_hw_web10/: base.html  edit.html  index.html  login.html  pictures.html  register.html  upload.html
hw_web10/hw_web10/: asgi.py  settings.py  urls.py  wsgi.py
hw_web10/users/: forms.py  urls.py  views.py
hw_web10/users/templates/users/: logout.html  signin.html  signup.html
